# netrunner-artwork

./: README.md
debian/: changelog  control  files  postrm  preinst  prerm  rules
debian/netrunner-artwork/DEBIAN/: conffiles  control  md5sums
debian/netrunner-artwork/etc/skel/: .esd_auth  .gtkrc-2.0-kde4  .kderc
debian/netrunner-artwork/etc/skel/.azureus/: azureus.statistics  devices.config  downloads.config  update.properties
debian/netrunner-artwork/etc/skel/.gconfd/: saved_state
etc/skel/: .gtkrc-2.0-kde4  .kderc
etc/skel/.azureus/: VuzeActivities.config  azureus.config  metasearch.config  tables.config
etc/skel/.azureus/tmp/: AZU7465293029293947123.tmp  AZU8172503430575773649.tmp
etc/skel/.cache/: event-sound-cache.tdb.5da0121c895425d3a4cf81874c1e0388.i486-pc-linux-gnu  event-sound-cache.tdb.91ff6f2262b1101861865b544c177e5e.i486-pc-linux-gnu
etc/skel/.config/gtk-3.0/: settings.ini
etc/skel/.config/kde.org/: systemsettings.conf
etc/skel/.config/menus/: applications-kmenuedit.menu
etc/skel/.config/qtcurve/: stylerc
etc/skel/.dbus/session-bus/: 5da0121c895425d3a4cf81874c1e0388-0  e874a60445272bde60b24a8a4c24845d-0
etc/skel/.kde/share/config/: dolphinrc  (+9 more)
etc/skel/.xine/: catalog.cache
opt/project-neon5/share/plasma/desktoptheme/Manjaro Orange/: CMakeLists.txt  colors  metadata.desktop
usr/share/color-schemes/: Netrunner15.colors
usr/share/icons/airblue/: _cursor.theme  index.theme
usr/share/icons/windows/: index.theme
usr/share/images/netrunner/: .directory
usr/share/netrunner/: .directory
usr/share/pixmaps/splash/: .directory
(+336 files in other folders)
